# premstash

./: .gitignore  Cargo.toml  README.md  install.sh
premstash/: cred.vault
src/: main.rs
src/client/: client.rs
src/server/: command.rs  mod.rs  parser.rs  serve.rs
src/server/gossip/: config.rs  config.yml  gossip.rs  mod.rs
src/vault/: encrypt.rs  mod.rs  vault.rs
src/vault/sqlite/: db.rs
