[package]
name = "premstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
nix = { version = "0.28.0", features = ["fs"] }
rusqlite = "0.31.0"
short-crypt = "1.0.28"
yaml-rust = "0.4.5"
